Added backend logic tests

--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
     <groupId>com.example</groupId>
     <artifactId>BookServiceWebApp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>BookServiceWebApp</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Book Service Application</description>
     <properties>
         <java.version>11</java.version>
         <vaadin.version>23.0.9</vaadin.version>
@@ -30,7 +31,12 @@
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-spring-boot-starter</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
